--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "project-management-app",
   "version": "0.0.0",
+  "author": "Jakhongir Ismoilov",
+  "description": "Project Managmenet Application",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-for-electron": "ng build --base-href \"./\"",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "electron:start": "electron ."
   },
   "private": true,
   "dependencies": {
@@ -31,6 +36,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "electron": "^21.3.1",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
